--- a/PhotoZap/Base.lproj/Main.storyboard
+++ b/PhotoZap/Base.lproj/Main.storyboard
@@ -98,50 +98,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="151" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="23i-VD-0Gi">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="126" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="23i-VD-0Gi">
                                 <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReceivedPhoto" rowHeight="151" id="vah-dp-hdD" customClass="ReceivedPhotoTableViewCell" customModule="PhotoZap" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReceivedPhoto" rowHeight="126" id="vah-dp-hdD" customClass="ReceivedPhotoTableViewCell" customModule="PhotoZap" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vah-dp-hdD" id="Hg5-Fl-8gn">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fCc-ZX-cju">
+                                                    <rect key="frame" x="15" y="13" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="BzM-Ff-m6f"/>
+                                                        <constraint firstAttribute="width" constant="100" id="NmW-Oc-CgM"/>
+                                                    </constraints>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rpf-Zy-262">
-                                                    <rect key="frame" x="168" y="63" width="53" height="24"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <rect key="frame" x="125" y="53" width="43" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eB0-CB-qBW">
-                                                    <rect key="frame" x="10" y="15" width="120" height="120"/>
-                                                    <state key="normal" title="Button">
+                                                    <rect key="frame" x="15" y="13" width="100" height="100"/>
+                                                    <state key="normal">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
                                                         <action selector="imageTapped:" destination="vah-dp-hdD" eventType="touchUpInside" id="ZmM-TG-EOJ"/>
                                                     </connections>
                                                 </button>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fCc-ZX-cju">
-                                                    <rect key="frame" x="10" y="15" width="120" height="120"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="120" id="BzM-Ff-m6f"/>
-                                                        <constraint firstAttribute="width" constant="120" id="NmW-Oc-CgM"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="fCc-ZX-cju" firstAttribute="centerX" secondItem="eB0-CB-qBW" secondAttribute="centerX" id="39r-so-0aj"/>
                                                 <constraint firstAttribute="bottom" secondItem="fCc-ZX-cju" secondAttribute="bottom" constant="15" id="3eW-Lu-zmO"/>
                                                 <constraint firstItem="fCc-ZX-cju" firstAttribute="leading" secondItem="Hg5-Fl-8gn" secondAttribute="leading" constant="10" id="6zH-9X-x1U"/>
-                                                <constraint firstAttribute="centerY" secondItem="rpf-Zy-262" secondAttribute="centerY" constant="0.5" id="8Uj-Kn-QOR"/>
-                                                <constraint firstItem="rpf-Zy-262" firstAttribute="leading" secondItem="fCc-ZX-cju" secondAttribute="trailing" constant="38" id="FCz-I2-DHy"/>
+                                                <constraint firstAttribute="centerY" secondItem="rpf-Zy-262" secondAttribute="centerY" id="8Uj-Kn-QOR"/>
+                                                <constraint firstItem="fCc-ZX-cju" firstAttribute="leading" secondItem="Hg5-Fl-8gn" secondAttribute="leading" constant="10" id="DYZ-iI-0um"/>
+                                                <constraint firstItem="rpf-Zy-262" firstAttribute="leading" secondItem="fCc-ZX-cju" secondAttribute="trailing" constant="10" id="FCz-I2-DHy"/>
                                                 <constraint firstItem="fCc-ZX-cju" firstAttribute="width" secondItem="eB0-CB-qBW" secondAttribute="width" id="I0Q-k9-EAB"/>
+                                                <constraint firstAttribute="centerX" secondItem="fCc-ZX-cju" secondAttribute="centerX" constant="230" id="Ibg-hs-keQ"/>
+                                                <constraint firstItem="eB0-CB-qBW" firstAttribute="leading" secondItem="Hg5-Fl-8gn" secondAttribute="leading" constant="20" id="Nzr-Oc-Drd"/>
+                                                <constraint firstAttribute="centerY" secondItem="fCc-ZX-cju" secondAttribute="centerY" id="Zrp-xn-Zl4"/>
                                                 <constraint firstItem="fCc-ZX-cju" firstAttribute="centerY" secondItem="eB0-CB-qBW" secondAttribute="centerY" id="jGD-mP-8Uh"/>
+                                                <constraint firstItem="fCc-ZX-cju" firstAttribute="leading" secondItem="Hg5-Fl-8gn" secondAttribute="leading" constant="15" id="tcO-G4-NzQ"/>
                                                 <constraint firstItem="fCc-ZX-cju" firstAttribute="height" secondItem="eB0-CB-qBW" secondAttribute="height" id="wlA-8A-V7D"/>
                                                 <constraint firstItem="fCc-ZX-cju" firstAttribute="top" secondItem="Hg5-Fl-8gn" secondAttribute="top" constant="15" id="xxb-6E-WCw"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="Nzr-Oc-Drd"/>
+                                                    <exclude reference="3eW-Lu-zmO"/>
+                                                    <exclude reference="6zH-9X-x1U"/>
+                                                    <exclude reference="DYZ-iI-0um"/>
+                                                    <exclude reference="Ibg-hs-keQ"/>
+                                                    <exclude reference="xxb-6E-WCw"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="nameLabel" destination="rpf-Zy-262" id="Wf7-8f-gn4"/>
